test/libsolidity/syntaxTests/iceRegressionTests/declarationUnaryTuple/declaration_unary_plus_tuple.sol
contract C
{
    function f() public
    {
        int x = +(0, 0);
    }
}
// ----
// ParserError 9636: (59-60): Use of unary + is disallowed.
